# routes/API/cars.js
@@ -50,8 +50,18 @@ router.get("/fuel", function (req, res) {
 	});
 });
 
+// get /cars/types (all car types)
+router.get("/types", function (req, res) {
+	db.query("SELECT * FROM car_types", function (err, result) {
+		if (err) {
+			send_error(res, err);
+		}
+		res.send(result);
+	});
+});
+
 // post /cars/add/type (create a new type of car)
-router.post("/add/type", check_user_token, checkPermission("ADD_REMOVE_VEHICLES"), function (req, res) {
+router.post("/add/cartype", check_user_token, checkPermission("ADD_REMOVE_VEHICLES"), async function (req, res) {
 	let brand = req.body.brand;
 	let model = req.body.model;
 	let trunk_space = req.body.trunk_space;
@@ -64,12 +74,37 @@ router.post("/add/type", check_user_token, checkPermission("ADD_REMOVE_VEHICLES"
 	let build_year = req.body.build_year;
 	let body_type = req.body.body_type;
 
-	if(!build_year || !brand || !model || !trunk_space || !seats || !doors || !fuel_type || !transmission || !towing_weight || !maximum_gross_weight || !body_type) {
-		res.status(400).send({ status: 400, message: "Missing parameters" });
+	// make a function that will check if the transmission is valid and if it is a correct boolean. Make it so that i can check if it is given in the underlying if statement
+	async function check_transmission(transmission) {
+		// if the transmission is not given, return false
+		if(transmission !== undefined || transmission !== null) {
+			// if the transmission is not a boolean, return false
+			if(transmission == 0 || transmission == 1){
+				return "is valid transmission";
+			} else {
+				return null;
+			}
+		}
+	}
+
+	if(!build_year || !brand || !model || !trunk_space || !seats || !doors || !fuel_type || !await check_transmission(transmission) || !towing_weight || !maximum_gross_weight || !body_type) {
+		res.status(400).send({ status: 400, message: "Missing or incorrect parameters" });
 		return;
 	}
 
-	db.query("INSERT INTO car_types SET (brand, model, trunk_space, seats, doors, fuel, transmission, towing_weight, maximum_gross_weight, build_year, body_type) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)", [
+	db.query("INSERT INTO car_types (\
+		brand, \
+		model, \
+		trunk_space, \
+		seats, \
+		doors, \
+		fuel, \
+		transmission,\
+		towing_weight, \
+		maximum_gross_weight, \
+		build_year, \
+		body_type \
+	) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)", [
 		brand,
 		model,
 		trunk_space,
@@ -80,15 +115,19 @@ router.post("/add/type", check_user_token, checkPermission("ADD_REMOVE_VEHICLES"
 		towing_weight,
 		maximum_gross_weight,
 		build_year,
-		body_type,
+		body_type
 	], function (err, result) {
 		if (err) {
-			send_error(res, err);
+			send_error(err, "Trying to add car");
 		} else {
 			res.send({ status: 200, message: "Car type added" });
 		}
 	});
 });
+
+// post /cars/add/car (create a new car)
+
+
 
 
 module.exports = router;
